refactor to upsert batch
